<resources>
    <string name="appTitle">Bitcoin Node Observer</string>
    <string name="retry">Retry</string>
    <string name="loadingData">Loading data...</string>
    <string name="noInternetConnection">No internet connection available...</string>
    <string name="bitcoinNode">Bitcoin Node</string>
    <string name="invalidPortNumber">Invalid port number</string>
    <string name="invalidHost">Invalid host</string>
    <string name="host">IP Address / Dynamic DNS URL</string>
    <string name="port">Port</string>
    <string name="save">Save</string>
    <string name="portHint">8333</string>
    <string name="ipAddressHint">1.2.3.4 / fe80::200:::20a2 / abc.dyndns.com</string>
    <string name="NodeHeaderImageContentDescription">Node header image</string>
    <string name="NodeStatusImageContentDescription">Node Status Image</string>
    <string name="reload">Reload</string>
    <string name="last_synchronisation">Last Synchronisation</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="message">Message</string>
    <string name="node_details">Node Details</string>
    <string name="node_status">Node Status</string>
    <string name="user_agent">User Agent</string>
    <string name="protocol_version">Protocol Version</string>
    <string name="block_height">Block Height</string>
    <string name="connected_since">Connected Since</string>
    <string name="asn">ASN</string>
    <string name="city">City</string>
    <string name="country_code">Country Code</string>
    <string name="timezone">Timezone</string>
    <string name="latitude_longitude">Latitude / Longitude</string>
    <string name="services">Services</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="hostname">Hostname</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="overall_peer_index">Overall Peer Index</string>
    <string name="peer_index_rank">Peer Index Rank</string>
    <string name="protocol_version_index">Protocol Version Index</string>
    <string name="services_index">Services Index</string>
    <string name="height_index">Height Index</string>
    <string name="asn_index">ASN Index</string>
    <string name="port_index">Port Index</string>
    <string name="network_speed_index">Network Speed Index</string>
    <string name="daily_latency_index">Daily Latency Index</string>
    <string name="daily_uptime_index">Daily Uptime Index</string>
    <string name="weekly_latency_index">Weekly Latency Index</string>
    <string name="weekly_uptime_index">Weekly Uptime Index</string>
    <string name="monthly_latency_index">Monthly Latency Index</string>
    <string name="monthly_uptime_index">Monthly Uptime Index</string>
    <string name="overflow">Overflow</string>
    <string name="feedback">Feedback</string>
    <string name="donate">Donate</string>
    <string name="credits">Credits</string>
    <string name="manual">How it works</string>
    <string name="feedbackIntro">If you have any questions, feedback, improvements, bug reports or you are just looking for friends, feel free to get in touch with me:</string>
    <string name="contribute">Contribute</string>
    <string name="contributeIntro">Bitcoin Node Observer is an open source project, feel free to join and help improving this project. More information on Github.</string>
    <string name="donation_address">bc1qqv97s06lrle7s2y203wp53s4r6f993w6f4vjul</string>
    <string name="donation_Intro">Developing and maintaining an app is a lot of work. This app has no ads and will be available for free at any time. Any Bitcoin donation is highly appreciated. Thank you so much.</string>
    <string name="credits_intro">This app uses images and services which are available for free, but should be mentioned somewhere. Here we do. Thanks for your great work.</string>
    <string name="manual_intro">Bitcoin Node Observer let you observe any public reachable node.\n\nIt uses Bitnodes API to gather all the information. So at the moment there is no direct interaction with a Bitcoin node, but this will be considered in a future release.\n\nIt works for IP and host addresses.
        Even Tor (.onion) hosts are possible to observe (at least some information).\n\nIf your node is not found, please check that your network is allowing incoming connections. More information here: https://bitcoin.org/en/full-node#network-configuration\n\nIn preferences you can activate background synchronisation.
        Android OS (or the modified version of your phones manufacturer) often prevent apps from doing background operations to save battery. Therefore it is strongly recommended to whitelist this app to get background synchronisation work properly.
        In the apps log view you can check if the synchronisation is working according your settings. Note, a small time divergence is wanted. It gives Android the opportunity to optimize or assembly work and this is healthy for your battery.
    </string>
    <string name="contribute_github">Github: kayth1/NodeObserver</string>
    <string name="credits_bitnodes">Bitnodes: https://bitnodes.earn.com</string>
    <string name="credits_icons">Icons: https://www.deviantart.com/taytel/art/ORB-Icons-87934875</string>
    <string name="twitter_kayth1234">Twitter: kayth1234</string>
    <string name="e_mail_thomas_kayser_com">E-Mail: thomas@kayser.com</string>
    <string name="telegram_kayth">Telegram: @kayth</string>
    <string name="preferences">Preferences</string>
    <string name="logging">Logging</string>
</resources>
