<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/feedbackFragmentToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:layout_gravity="center"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/feedbackFragmentIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:src="@drawable/feedback"/>

        <TextView
                android:id="@+id/feedbackFragmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/feedback"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/feedbackFragmentToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


        <TextView
                android:id="@+id/feedbackFragmentIntroText"
                android:text="@string/feedbackIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/feedbackFragmentTwitterLabel"
                android:text="@string/twitter_kayth1234"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textIsSelectable="true"
                app:layout_constraintTop_toBottomOf="@+id/feedbackFragmentIntroText"
                app:layout_constraintStart_toStartOf="@+id/feedbackFragmentIntroText"/>
        <TextView
                android:id="@+id/feedbackFragmentEmailLabel"
                android:text="@string/e_mail_thomas_kayser_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                app:layout_constraintTop_toBottomOf="@+id/feedbackFragmentTwitterLabel"
                app:layout_constraintStart_toStartOf="@+id/feedbackFragmentTwitterLabel"/>
        <TextView
                android:id="@+id/feedbackFragmentTelegramLabel"
                android:text="@string/telegram_kayth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                app:layout_constraintTop_toBottomOf="@+id/feedbackFragmentEmailLabel"
                app:layout_constraintStart_toStartOf="@+id/feedbackFragmentEmailLabel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>