<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline">

    <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.68"/>

    <!-- TITLE -->

    <ImageView
            android:id="@+id/nodeInputFragmentNodeImageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="3dp"
            android:src="@drawable/bitcoin_logo"
            android:contentDescription="@string/NodeHeaderImageContentDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/nodeInputFragmentNodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:text="@string/node"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/nodeInputFragmentNodeImageView"
            app:layout_constraintTop_toTopOf="@+id/nodeInputFragmentNodeImageView"
            app:layout_constraintBottom_toBottomOf="@+id/nodeInputFragmentNodeImageView"/>

    <!-- IP ADDRESS -->

    <TextView
            android:id="@+id/nodeInputFragmentIpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/ip_address"
            app:layout_constraintTop_toBottomOf="@id/nodeInputFragmentNodeImageView"
            app:layout_constraintStart_toStartOf="@+id/nodeInputFragmentIpField"/>

    <EditText
            android:id="@+id/nodeInputFragmentIpField"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            android:digits="0123456789."
            android:textSize="12sp"
            android:importantForAutofill="no"
            android:hint="@string/ipAddressHint"
            app:layout_constraintTop_toBottomOf="@+id/nodeInputFragmentIpLabel"
            app:layout_constraintEnd_toStartOf="@+id/nodeInputFragmentPortField"/>

    <!-- PORT NUMBER -->

    <TextView
            android:id="@+id/nodeInputFragmentPortLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/port"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/nodeInputFragmentIpLabel"/>

    <EditText
            android:id="@+id/nodeInputFragmentPortField"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:textSize="12sp"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:hint="@string/portHint"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/nodeInputFragmentIpField"/>

    <!-- SAVE BUTTON -->

    <Button
            android:id="@+id/nodeInputFragmentSaveButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nodeInputFragmentIpField"/>

</android.support.constraint.ConstraintLayout>