<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/creditsFragmentToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:layout_gravity="center"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/creditsFragmentIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:src="@drawable/credits"/>

        <TextView
                android:id="@+id/creditsFragmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/credits"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/creditsFragmentToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/creditsFragmentIntroText"
                android:text="@string/credits_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/creditsFragmentBitnodesLabel"
                android:text="@string/credits_bitnodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textIsSelectable="true"
                app:layout_constraintTop_toBottomOf="@+id/creditsFragmentIntroText"
                app:layout_constraintStart_toStartOf="@+id/creditsFragmentIntroText"/>
        <TextView
                android:id="@+id/creditsFragmentIconLabel"
                android:text="@string/credits_icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textIsSelectable="true"
                app:layout_constraintTop_toBottomOf="@+id/creditsFragmentBitnodesLabel"
                app:layout_constraintStart_toStartOf="@+id/creditsFragmentBitnodesLabel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>